fix(15647): Added minmium Reschedule and cancellation Notice Period with validation
Signed-off-by: surajgjadhav <surajjadhavasmi@gmail.com>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -403,6 +403,7 @@
   "error_workflow_unauthorized_create": "You are not able to create this workflow",
   "error_schedule_unauthorized_create": "You are not able to create this schedule",
   "booking_already_cancelled": "This booking was already canceled",
+  "booking_cant_cancelled": "This booking can't be canceled",
   "booking_already_accepted_rejected": "This booking was already accepted or rejected",
   "go_back_home": "Go back home",
   "or_go_back_home": "Or go back home",
@@ -881,7 +882,9 @@
   "add_new_event_type": "Add a new event type",
   "new_event_type_to_book_description": "Create a new event type for people to book times with.",
   "length": "Length",
-  "minimum_booking_notice": "Minimum Notice",
+  "minimum_booking_notice": "Minimum Booking Notice",
+  "minimum_rescheduling_notice": "Minimum Rescheduling Notice",
+  "minimum_cancelation_notice": "Minimum Cancellation Notice",
   "offset_toggle": "Offset start times",
   "offset_toggle_description": "Offset timeslots shown to bookers by a specified number of minutes",
   "offset_start": "Offset by",
