--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -883,8 +883,8 @@
   "new_event_type_to_book_description": "Create a new event type for people to book times with.",
   "length": "Length",
   "minimum_booking_notice": "Minimum Booking Notice",
-  "minimum_rescheduling_notice": "Minimum Rescheduling Notice",
-  "minimum_cancelation_notice": "Minimum Cancellation Notice",
+  "minimum_update_notice": "Minimum cancellation/rescheduling notice time",
+  "minimum_update_notice_description": "Prevent people from cancelling or rescheduling too close to the event time",
   "offset_toggle": "Offset start times",
   "offset_toggle_description": "Offset timeslots shown to bookers by a specified number of minutes",
   "offset_start": "Offset by",
