fix: updated translations and added lable to recheduling/cancellation notice input
Signed-off-by: surajgjadhav <surajjadhavasmi@gmail.com>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -882,7 +882,7 @@
   "add_new_event_type": "Add a new event type",
   "new_event_type_to_book_description": "Create a new event type for people to book times with.",
   "length": "Length",
-  "minimum_booking_notice": "Minimum Booking Notice",
+  "minimum_booking_notice": "Minimum Notice",
   "minimum_update_notice": "Minimum cancellation/rescheduling notice time",
   "minimum_update_notice_description": "Prevent people from cancelling or rescheduling too close to the event time",
   "offset_toggle": "Offset start times",
