chore: change title and description

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1555,8 +1555,8 @@
   "report_app": "Report app",
   "limit_booking_frequency": "Limit booking frequency",
   "limit_booking_frequency_description": "Limit how many times this event can be booked",
-  "limit_booking_only_first_slot": "Limit booking only first slot",
-  "limit_booking_only_first_slot_description": "Allow only the first slot of every day to be booked",
+  "only_show_first_available_slot": "Only show the first slot of each day as available",
+  "only_show_first_available_slot_description": "This will limit your availability for this event type to 1 slot per day; at the earliest available time.",
   "limit_total_booking_duration": "Limit total booking duration",
   "limit_total_booking_duration_description": "Limit total amount of time that this event can be booked",
   "add_limit": "Add Limit",
