--- a/apps/web/public/static/locales/it/common.json
+++ b/apps/web/public/static/locales/it/common.json
@@ -2461,6 +2461,7 @@
   "leave_without_assigning_anyone": "Uscire senza effettuare assegnazioni?",
   "leave_without_adding_attendees": "Confermi di voler uscire da questo evento senza aggiungere partecipanti?",
   "no_availability_shown_to_bookers": "Se non assegni nessuno a questo evento, chi prenota non vedrà alcuna disponibilità.",
+  "go_back_and_assign": "Torna indietro ed effettua assegnazione",
   "leave_without_assigning": "Esci senza assegnazioni",
   "always_show_x_days": "Sempre {{x}} giorni disponibili",
   "unable_to_subscribe_to_the_platform": "Si è verificato un errore durante il tentativo di abbonamento al piano Platform, riprova più tardi",
@@ -2474,6 +2475,5 @@
   "USER_PENDING_MEMBER_OF_THE_ORG": "L'utente è un membro in sospeso dell'organizzazione",
   "USER_ALREADY_INVITED_OR_MEMBER": "L'utente è già stato invitato o è un membro",
   "USER_MEMBER_OF_OTHER_ORGANIZATION": "L'utente è membro di un'organizzazione di cui questo team non fa parte.",
-  "go_back_assign_and_save": "Torna indietro, assegna e salva",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Aggiungi le tue nuove stringhe qui sopra ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
