feat: Change hashedLink field to array
Signed-off-by: Souptik Datta <souptikdatta2001@gmail.com>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -851,6 +851,9 @@
   "copy_private_link": "Copy private link",
   "copy_private_link_to_event": "Copy private link to event",
   "private_link_description": "Generate a private URL to share without exposing your {{appName}} username",
+  "single_use_links_title": "Single Use Links",
+  "single_use_links_description": "Generate a single use Link, which will be destroyed once used",
+  "add_a_single_use_link": "Add new link",
   "invitees_can_schedule": "Invitees can schedule",
   "date_range": "Date Range",
   "calendar_days": "calendar days",
