--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1124,6 +1124,7 @@
   "update_location": "Update Location",
   "location_updated": "Location updated",
   "guests_added": "Guests added",
+  "unable_to_add_guests": "Unable to add guests",
   "email_validation_error": "That doesn't look like an email address",
   "emails_must_be_unique_valid": "Emails must be unique and valid",
   "place_where_cal_widget_appear": "Place this code in your HTML where you want your {{appName}} widget to appear.",
