--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1597,7 +1597,7 @@
   "how_long_after": "How long after event ends?",
   "no_available_slots": "No Available slots",
   "time_available": "Time available",
-  "cant_find_the_right_video_app_visit_our_app_store": "Can't find the right video app? Visit our <1>App Store</1>.",
+  "cant_find_the_right_conferencing_app_visit_our_app_store": "Can't find the right conferencing app? Visit our <1>App Store</1>.",
   "install_new_calendar_app": "Install new calendar app",
   "make_phone_number_required": "Make phone number required for booking event",
   "new_event_type_availability": "{{eventTypeTitle}} Availability",
