i18n: update translations for "by proceeding, ..."

--- a/apps/web/public/static/locales/ja/common.json
+++ b/apps/web/public/static/locales/ja/common.json
@@ -2099,5 +2099,6 @@
   "email_team_invite|heading|invited_to_regular_team": "{{appName}} チームに参加するよう招待されました",
   "email_team_invite|content|invited_to_regular_team": "{{invitedBy}}から{{appName}}の「{{teamName}}」に参加するよう招待されました。{{appName}}はイベント調整スケジューラーで、チーム内で延々とメールのやりとりをすることなく、ミーティングのスケジュールを設定できます。",
   "privacy": "プライバシー",
+  "signing_up_terms":"次に進むことで、<0>利用規約</0>と<1>プライバシーポリシー</1>に同意したことになります",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ この上に新しい文字列を追加してください ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
