--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -2099,5 +2099,6 @@
   "email_team_invite|heading|invited_to_regular_team": "Byli jste pozváni do týmu {{appName}}",
   "email_team_invite|content|invited_to_regular_team": "Uživatel {{invitedBy}} vás pozval, abyste se připojili k jeho týmu „{{teamName}}“ v aplikaci {{appName}}. {{appName}} je plánovač událostí, který vám a vašemu týmu umožňuje plánovat schůzky bez e-mailového pingpongu.",
   "privacy": "Ochrana soukromí",
+  "signing_up_terms": "Pokračováním souhlasíte s našimi <0>Podmínkami</0> a <1>Zásadami ochrany osobních údajů</1>.",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Přidejte své nové řetězce nahoru ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
