--- a/apps/web/public/static/locales/da/common.json
+++ b/apps/web/public/static/locales/da/common.json
@@ -1537,5 +1537,6 @@
   "overlay_my_calendar": "Vis min kalender",
   "need_help": "Brug for hjælp?",
   "send_email": "Send e-mail",
-  "email_team_invite|subject|invited_to_regular_team": "{{user}} inviterede dig til at deltage i teamet {{team}} på {{appName}}"
+  "email_team_invite|subject|invited_to_regular_team": "{{user}} inviterede dig til at deltage i teamet {{team}} på {{appName}}",
+  "signing_up_terms": "Ved at fortsætte accepterer du vores <0>Vilkår</0> og <1>Privatlivspolitik</1>."
 }
