--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -2098,5 +2098,6 @@
   "email_team_invite|heading|invited_to_regular_team": "Lo han invitado a unirse a un equipo en {{appName}}",
   "email_team_invite|content|invited_to_regular_team": "{{invitedBy}} lo ha invitado a unirse a su equipo \"{{teamName}}\" en {{appName}}. {{appName}} es el planificador de eventos que le permite a usted y a su equipo programar reuniones sin correos electrónicos de ida y vuelta.",
   "privacy": "Privacidad",
+  "signing_up_terms": "Al continuar, acepta nuestras <0>condiciones de uso</0> y nuestra <1>política de privacidad</1>.",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Agregue sus nuevas cadenas arriba ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
