--- a/apps/web/public/static/locales/sk/common.json
+++ b/apps/web/public/static/locales/sk/common.json
@@ -28,5 +28,6 @@
   "event_request_cancelled": "Vaša plánovaná udalosť bola zrušená",
   "organizer": "Organizátor",
   "need_to_reschedule_or_cancel": "Preplánovať alebo zrušiť?",
-  "no_options_available": "Nie sú k dispozícii žiadne možnosti"
+  "no_options_available": "Nie sú k dispozícii žiadne možnosti",
+  "signing_up_terms": "Pokračovaním súhlasíte s <0>Podmienkami</0> a <1>Zásadami ochrany osobných údajov<1>"
 }
