--- a/apps/web/public/static/locales/uk/common.json
+++ b/apps/web/public/static/locales/uk/common.json
@@ -2132,5 +2132,6 @@
   "email_team_invite|heading|invited_to_regular_team": "Вас запрошено приєднатися до команди в застосунку {{appName}}",
   "email_team_invite|content|invited_to_regular_team": "{{invitedBy}} запрошує вас приєднатися до команди «{{teamName}}» в {{appName}}. {{appName}} — планувальник подій, який дає змогу вам і вашій команді планувати зустрічі без тривалої переписки електронною поштою.",
   "privacy": "Політика конфіденційності",
+  "signing_up_terms": "Продовжуючи, ви погоджуєтеся з <0>Умовами</0> та <1>Політикою конфіденційності<1>",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
