--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2333,6 +2333,7 @@
   "redirect_team_disabled": "Provide a link to a team member when OOO (Team plan required)",
   "out_of_office_unavailable_list": "Out of office unavailability list",
   "success_deleted_entry_out_of_office": "Successfully deleted entry",
+  "success_edited_entry_out_of_office": "Successfully edited entry",
   "temporarily_out_of_office": "Temporarily Out-Of-Office?",
   "add_a_redirect": "Add a redirect",
   "create_entry": "Create entry",
@@ -2454,6 +2455,7 @@
   "ooo_create_entry_modal": "Go Out of Office",
   "ooo_select_reason": "Select reason",
   "create_an_out_of_office": "Go Out of Office",
+  "edit_an_out_of_office": "Edit this Out of Office Entry",
   "submit_feedback": "Submit Feedback",
   "host_no_show": "Your host didn't show up",
   "no_show_description": "You can reschedule another meeting with them",
