chore: Change "edit ooo event" modal title
Signed-off-by: Souptik Datta <souptikdatta2001@gmail.com>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2455,7 +2455,7 @@
   "ooo_create_entry_modal": "Go Out of Office",
   "ooo_select_reason": "Select reason",
   "create_an_out_of_office": "Go Out of Office",
-  "edit_an_out_of_office": "Edit this Out of Office Entry",
+  "edit_an_out_of_office": "Edit Out of Office Entry",
   "submit_feedback": "Submit Feedback",
   "host_no_show": "Your host didn't show up",
   "no_show_description": "You can reschedule another meeting with them",
