--- a/apps/web/public/static/locales/km/common.json
+++ b/apps/web/public/static/locales/km/common.json
@@ -1,14 +1,6 @@
 {
   "identity_provider": "អ្នកផ្តល់អត្តសញ្ញាណ",
-  "trial_days_left": "អ្នកនៅសល់ $t(day, {\"count\": {{days}} }) ទៀតក្នុងការសាកល្បង PRO របស់អ្នក។",
-  "day_one": "{{count}} ថ្ងៃ",
-  "day_other": "{{count}} ថ្ងៃ",
-  "second_one": "{{count}} នាទី",
-  "second_other": "{{count}} នាទី",
-  "upgrade_now": "ធ្វើបច្ចុប្បន្នភាពឥឡូវនេះ",
-  "accept_invitation": "ទទួលយកការអញ្ជើញ",
   "calcom_explained": "{{appName}} ផ្តល់ហេដ្ឋារចនាសម្ព័ន្ធកំណត់ពេលសម្រាប់មនុស្សគ្រប់គ្នា។",
-  "calcom_explained_new_user": "បញ្ចប់ការកំណត់របស់អ្នក {{appName}} គណនី! អ្នកនៅសល់តែប៉ុន្មានជំហានទៀតប៉ុណ្ណោះ ក្នុងការដោះស្រាយបញ្ហាការកំណត់កាលវិភាគរបស់អ្នក។",
   "have_any_questions": "អ្នកមានសំណួរឬ? យើងនៅទីនេះដើម្បីជួយ។",
   "reset_password_subject": "{{appName}}: កំណត់ការណែនាំពាក្យសម្ងាត់ឡើងវិញ",
   "verify_email_subject": "{{appName}}: ផ្ទៀងផ្ទាត់គណនីរបស់អ្នក។",
@@ -21,8 +13,6 @@
   "verify_email_email_body": "សូមផ្ទៀងផ្ទាត់អ៊ីមែលរបស់អ្នកដោយចុចប៊ូតុងខាងក្រោម។",
   "verify_email_by_code_email_body": "សូមផ្ទៀងផ្ទាត់អាសយដ្ឋានអ៊ីមែលរបស់អ្នកដោយប្រើលេខកូដខាងក្រោម។",
   "verify_email_email_link_text": "នេះជាតំណភ្ជាប់ក្នុងករណីដែលអ្នកមិនចូលចិត្តចុចប៊ូតុង៖",
-  "email_verification_code": "សូម​បញ្ចូល​កូដ",
-  "email_verification_code_placeholder": "បញ្ចូលលេខកូដផ្ទៀងផ្ទាត់ដែលបានផ្ញើទៅអ៊ីមែលរបស់អ្នក។",
   "incorrect_email_verification_code": "លេខកូដផ្ទៀងផ្ទាត់មិនត្រឹមត្រូវទេ។",
   "email_sent": "អ៊ីមែលត្រូវបានផ្ញើដោយជោគជ័យ",
   "email_not_sent": "កំហុសបានកើតឡើងនៅពេលផ្ញើអ៊ីមែល",
@@ -40,17 +30,13 @@
   "rejection_reason_title": "បដិសេធសំណើកក់?",
   "rejection_reason_description": "តើអ្នកប្រាកដថាចង់បដិសេធការកក់នេះទេ? យើង​នឹង​ឲ្យ​អ្នក​ដែល​ព្យាយាម​កក់​នោះ​ដឹង។ អ្នកអាចផ្តល់ហេតុផលខាងក្រោម។",
   "rejection_confirmation": "បដិសេធការកក់",
-  "manage_this_event": "គ្រប់គ្រងព្រឹត្តិការណ៍នេះ។",
   "invite_team_member": "អញ្ជើញសមាជិកក្រុម",
   "invite_team_individual_segment": "អញ្ជើញជាបុគ្គល",
   "invite_team_bulk_segment": "ការនាំចូលច្រើន",
   "your_event_has_been_scheduled": "ព្រឹត្តិការណ៍របស់អ្នកត្រូវបានកំណត់ពេល",
   "your_event_has_been_scheduled_recurring": "ព្រឹត្តិការណ៍កើតឡើងដដែលៗរបស់អ្នកត្រូវបានកំណត់ពេល",
-  "accept_our_license": "ទទួលយកអាជ្ញាប័ណ្ណរបស់យើងដោយការផ្លាស់ប្តូរ .env អថេរ <1>NEXT_PUBLIC_LICENSE_CONSENT</1> ទៅ '{{agree}}'.",
-  "remove_banner_instructions": "ដើម្បីលុបបដានេះ សូមបើកឯកសារ .env របស់អ្នក ហើយផ្លាស់ប្តូរ <1>NEXT_PUBLIC_LICENSE_CONSENT</1> អថេរទៅ '{{agree}}'.",
   "error_message": "សារកំហុសគឺ៖ '{{errorMessage}}'",
   "refund_failed_subject": "ការសងប្រាក់វិញបានបរាជ័យ៖ {{name}} - {{date}} - {{eventType}}",
-  "refund_failed": "ការសងប្រាក់វិញសម្រាប់ព្រឹត្តិការណ៍ {{eventType}} សម្រាប់ {{userName}} នៅថ្ងៃ {{date}} បរាជ័យ។",
   "check_with_provider_and_user": "សូមពិនិត្យជាមួយអ្នកផ្តល់សេវាទូទាត់របស់អ្នក និង {{user}} របៀបដោះស្រាយនេះ។",
   "a_refund_failed": "ការសងប្រាក់វិញបានបរាជ័យ",
   "awaiting_payment_subject": "កំពុងរង់ចាំការទូទាត់៖ {{title}} នៅថ្ងៃ {{date}}",
@@ -60,25 +46,12 @@
   "paid": "បង់ប្រាក់",
   "refunded": "សងប្រាក់វិញ។",
   "payment": "ការទូទាត់",
-  "missing_card_fields": "ប្រអប់ កាត ត្រូវតែបំពេញ",
   "pay_now": "បង់ប្រាក់ឥឡូវនេះ",
-  "codebase_has_to_stay_opensource": "មូលដ្ឋានកូដត្រូវតែរក្សាប្រភពបើកចំហ ទោះបីជាវាត្រូវបានកែប្រែឬអត់ក៏ដោយ។",
-  "cannot_repackage_codebase": "អ្នកមិនអាចវេចខ្ចប់ឡើងវិញ ឬលក់មូលដ្ឋានកូដបានទេ។",
-  "acquire_license": "ទទួលបានអាជ្ញាប័ណ្ណពាណិជ្ជកម្ម ដើម្បីលុបលក្ខខណ្ឌទាំងនេះដោយការផ្ញើអ៊ីមែល",
-  "terms_summary": "សេចក្តីសង្ខេបនៃលក្ខខណ្ឌ",
-  "open_env": "បើកឯកសារ .env ហើយយល់ព្រមនឹងអាជ្ញាប័ណ្ណរបស់យើង។",
-  "env_changed": "ខ្ញុំបានផ្លាស់ប្តូរឯកសារ .env របស់ខ្ញុំ",
-  "accept_license": "ទទួលយកអាជ្ញាប័ណ្ណ",
-  "still_waiting_for_approval": "ព្រឹត្តិការណ៍មួយនៅតែរង់ចាំការយល់ព្រម",
-  "event_is_still_waiting": "សំណើព្រឹត្តិការណ៍កំពុងរង់ចាំ៖ {{attendeeName}} - {{date}} - {{eventType}}",
   "no_more_results": "មិនមានលទ្ធផលទៀតទេ",
   "no_results": "គ្មាន​លទ្ធផល",
   "load_more_results": "ផ្ទុកលទ្ធផលបន្ថែមទៀត",
-  "integration_meeting_id": "{{integrationName}} លេខសម្គាល់ការប្រជុំ៖ {{meetingId}}",
   "confirmed_event_type_subject": "បញ្ជាក់៖ {{eventType}} ជាមួយ {{name}} នៅ {{date}}",
-  "new_event_request": "សំណើព្រឹត្តិការណ៍ថ្មី៖ {{attendeeName}} - {{date}} - {{eventType}}",
   "confirm_or_reject_request": "បញ្ជាក់ ឬបដិសេធសំណើ",
-  "check_bookings_page_to_confirm_or_reject": "ពិនិត្យមើលទំព័រកក់របស់អ្នក ដើម្បីបញ្ជាក់ ឬបដិសេធការកក់។",
   "event_awaiting_approval": "ព្រឹត្តិការណ៍មួយកំពុងរង់ចាំការយល់ព្រមរបស់អ្នក។",
   "event_awaiting_approval_recurring": "ព្រឹត្តិការណ៍កើតឡើងដដែលៗកំពុងរង់ចាំការយល់ព្រមរបស់អ្នក។",
   "someone_requested_an_event": "មាននរណាម្នាក់បានស្នើសុំរៀបចំព្រឹត្តិការណ៍មួយនៅលើប្រតិទិនរបស់អ្នក។",
@@ -90,7 +63,6 @@
   "booking_submitted_subject": "បានដាក់ស្នើការកក់ទុក៖ {{title}} នៅថ្ងៃ {{date}}",
   "download_recording_subject": "ទាញយកការថត៖ {{title}} នៅថ្ងៃ {{date}}",
   "download_your_recording": "ទាញយកការថតរបស់អ្នក។",
-  "your_meeting_has_been_booked": "ការប្រជុំរបស់អ្នកត្រូវបានកក់ទុក",
   "event_type_has_been_rescheduled_on_time_date": "{{title}} របស់អ្នកត្រូវបានកំណត់ពេលវេលាឡើងវិញ ទៅថ្ងៃ {{date}}.",
   "event_has_been_rescheduled": "បានធ្វើបច្ចុប្បន្នភាព - ព្រឹត្តិការណ៍របស់អ្នកត្រូវបានកំណត់ពេលឡើងវិញ",
   "request_reschedule_subtitle": "{{organizer}} បានលុបចោលការកក់ ហើយស្នើឱ្យអ្នកជ្រើសរើសពេលផ្សេងទៀត។",
@@ -100,56 +72,23 @@
   "requested_to_reschedule_subject_attendee": "ត្រូវតែកាលវិភាគឡើងវិញ: សូមកក់ពេលវេលាថ្មីសម្រាប់ {{eventType}} ជាមួយ {{name}}",
   "hi_user_name": "សួស្តី {{name}}",
   "ics_event_title": "{{eventType}} ជាមួយ {{name}}",
-  "new_event_subject": "ព្រឹត្តិការណ៍ថ្មី៖ {{attendeeName}} - {{date}} - {{eventType}}",
-  "join_by_entrypoint": "ចូលរួមដោយ {{entryPoint}}",
   "notes": "កំណត់ចំណាំ",
-  "manage_my_bookings": "គ្រប់គ្រងការកក់របស់ខ្ញុំ",
   "need_to_make_a_change": "ត្រូវ​ការ​ផ្លាស់​ប្តូ​រ​?",
   "new_event_scheduled": "ព្រឹត្តិការណ៍ថ្មីមួយត្រូវបានកំណត់ពេល។",
   "new_event_scheduled_recurring": "ព្រឹត្តិការណ៍កើតឡើងម្តងទៀតត្រូវបានកំណត់ពេល។",
-  "invitee_email": "អ៊ីមែលអញ្ជើញ",
   "invitee_timezone": "តំបន់ពេលវេលាអញ្ជើញ",
   "time_left": "ពេលវេលានៅសល់",
   "event_type": "ប្រភេទព្រឹត្តិការណ៍",
-  "enter_meeting": "ចូលប្រជុំ",
-  "video_call_provider": "អ្នកផ្តល់សេវាហៅជាវីដេអូ",
-  "meeting_id": "លេខសម្គាល់ការប្រជុំ",
-  "meeting_password": "ពាក្យសម្ងាត់ការប្រជុំ",
   "meeting_url": "URL ការប្រជុំ",
-  "meeting_request_rejected": "សំណើប្រជុំរបស់អ្នកត្រូវបានបដិសេធ",
-  "rejected_event_type_with_organizer": "ច្រានចោល៖ {{eventType}} ជាមួយ {{organizer}} នៅថ្ងៃ {{date}}",
   "hi": "សួស្តី",
-  "join_team": "ចូលរួមក្រុម",
-  "manage_this_team": "គ្រប់គ្រងក្រុមនេះ",
-  "team_info": "ព័ត៌មានក្រុម",
-  "request_another_invitation_email": "ប្រសិនបើអ្នកមិនចង់ប្រើ {{toEmail}} ជា {{appName}} របស់អ្នក អ៊ីម៉ែលឬ គណនី {{appName}} មានរួចហើយ, សូមស្នើសុំការអញ្ជើញមួយផ្សេងទៀតទៅកាន់អ៊ីមែលនោះ។",
-  "you_have_been_invited": "អ្នកត្រូវបានអញ្ជើញឱ្យចូលរួមក្រុម {{teamName}}",
   "user_invited_you": "{{user}} បានអញ្ជើញអ្នកឱ្យចូលរួម {{entity}} {{team}} នៅលើ {{appName}}",
-  "hidden_team_member_title": "អ្នកត្រូវបានលាក់នៅក្នុងក្រុមនេះ។",
-  "hidden_team_member_message": "កៅអីរបស់អ្នកមិនត្រូវបានបង់ទេ ទាំង Upgrade ទៅ PRO ឬអនុញ្ញាតឱ្យម្ចាស់ក្រុមដឹងថាពួកគេអាចបង់ប្រាក់សម្រាប់កៅអីរបស់អ្នក។",
-  "hidden_team_owner_message": "អ្នក​ត្រូវ​ការ​គណនី​គាំទ្រ​ដើម្បី​ប្រើ​ក្រុម អ្នក​ត្រូវ​បាន​លាក់​រហូត​ដល់​អ្នក Upgrade",
-  "link_expires": "p.s. វាផុតកំណត់នៅក្នុង {{expiresIn}} ម៉ោង",
-  "upgrade_to_per_seat": "Upgrade ទៅ Per-Seat",
   "seat_options_doesnt_support_confirmation": "ជម្រើសកៅអីមិនគាំទ្រតម្រូវការបញ្ជាក់ទេ។",
-  "team_upgrade_seats_details": "ក្នុងចំណោមសមាជិក {{memberCount}} នាក់នៅក្នុងក្រុមរបស់អ្នក។, {{unpaidCount}} កន្លែងអង្គុយមិនបង់ប្រាក់ទេ។ នៅ ${{seatPrice}}/ខែក្នុងមួយកៅអី តម្លៃសរុបប៉ាន់ស្មាននៃសមាជិកភាពរបស់អ្នកគឺ ${{totalCost}}/ខែ.",
   "team_upgrade_banner_description": "អ្នកមិនទាន់បានបញ្ចប់ការរៀបចំក្រុមរបស់អ្នកទេ។ ក្រុមរបស់អ្នក \"{{teamName}}\" ត្រូវការធ្វើឱ្យប្រសើរឡើង។",
   "upgrade_banner_action": "Upgrade ទីនេះ",
-  "team_upgraded_successfully": "ក្រុមរបស់អ្នកត្រូវបាន upgrade ដោយជោគជ័យ!",
   "org_upgrade_banner_description": "សូមអរគុណសម្រាប់ការសាកល្បងគម្រោង Organization របស់យើង។ យើងកត់សំគាល់ Organization របស់អ្នក \"{{teamName}}\" ត្រូវការធ្វើឱ្យប្រសើរឡើង។",
-  "org_upgraded_successfully": "Organization របស់អ្នកត្រូវបានដំឡើងកំណែដោយជោគជ័យ!",
-  "use_link_to_reset_password": "ប្រើតំណខាងក្រោមដើម្បីកំណត់ពាក្យសម្ងាត់របស់អ្នកឡើងវិញ",
-  "hey_there": "ហេ!",
-  "forgot_your_password_calcom": "ភ្លេចពាក្យសម្ងាត់? - {{appName}}",
-  "delete_webhook_confirmation_message": "តើអ្នកប្រាកដថាចង់លុប webhook នេះទេ? អ្នកនឹងលែងទទួលបានទិន្នន័យប្រជុំ {{appName}} តាម URL ដែលបានបញ្ជាក់, ក្នុងពេលវេលាជាក់ស្តែង នៅពេលដែលព្រឹត្តិការណ៍មួយត្រូវបានកំណត់ពេល ឬលុបចោល។",
-  "confirm_delete_webhook": "បាទ/ចាស លុប webhook",
   "edit_webhook": "កែសម្រួល Webhook",
-  "delete_webhook": "លុប Webhook",
-  "webhook_status": "ស្ថានភាព Webhook",
-  "webhook_enabled": "Webhook បានបើក",
-  "webhook_disabled": "Webhook បានបិទ",
   "webhook_response": "ការឆ្លើយតប Webhook",
   "webhook_test": "តេស្ត Webhook",
-  "manage_your_webhook": "គ្រប់គ្រង webhook របស់អ្នក។",
   "webhook_created_successfully": "Webhook បានបង្កើតដោយជោគជ័យ!",
   "webhook_updated_successfully": "Webhook បានធ្វើបច្ចុប្បន្នភាពដោយជោគជ័យ!",
   "webhook_removed_successfully": "Webhook ត្រូវបានដកចេញដោយជោគជ័យ!",
@@ -166,7 +105,6 @@
   "upload_target": "បង្ហោះ {{target}}",
   "no_target": "គ្មាន {{target}}",
   "slide_zoom_drag_instructions": "អូសដើម្បីពង្រីក អូសដើម្បីដាក់ទីតាំងឡើងវិញ",
-  "view_notifications": "មើលការជូនដំណឹង",
   "view_public_page": "មើលទំព័រសាធារណៈ",
   "copy_public_page_link": "ចម្លងតំណទំព័រសាធារណៈ",
   "sign_out": "ចាកចេញ",
@@ -175,13 +113,10 @@
   "until": "រហូតដល់",
   "powered_by": "ដំណើរការដោយ",
   "unavailable": "មិន​មាន",
-  "set_work_schedule": "កំណត់កាលវិភាគការងាររបស់អ្នក។",
-  "change_bookings_availability": "ផ្លាស់ប្តូរនៅពេលដែលអ្នកមានសម្រាប់ការកក់",
   "select": "ជ្រើសរើស...",
   "2fa_confirm_current_password": "បញ្ជាក់ពាក្យសម្ងាត់បច្ចុប្បន្នរបស់អ្នក ដើម្បីចាប់ផ្តើម។",
   "2fa_scan_image_or_use_code": "ស្កេនរូបភាពខាងក្រោមដោយប្រើកម្មវិធីផ្ទៀងផ្ទាត់(Authenticator App) ឬបញ្ចូលលេខកូដអត្ថបទដោយដៃជំនួសវិញ។",
   "text": "អត្ថបទ",
-  "multiline_text": "អត្ថបទច្រើនបន្ទាត់",
   "number": "ចំនួន",
   "checkbox": "ប្រអប់ធីក",
   "is_required": "គឺ​តំរូវ​អោយ​មាន",
@@ -194,18 +129,8 @@
   "guest": "ភ្ញៀវ",
   "email": "អ៊ីមែល",
   "full_name": "ឈ្មោះ​ពេញ",
-  "january": "មករា",
-  "february": "កុម្ភៈ",
-  "march": "មីនា",
   "april": "មេសា",
-  "may": "ឧសភា",
   "june": "មិថុនា",
-  "july": "កក្កដា",
-  "august": "សីហា",
-  "september": "កញ្ញា",
-  "october": "តុលា",
-  "november": "វិច្ឆិកា",
-  "december": "ធ្នូ",
   "monday": "ច័ន្ទ",
   "tuesday": "អង្គារ",
   "wednesday": "ពុធ",
@@ -222,22 +147,16 @@
   "event_types_page_title": "ប្រភេទព្រឹត្តិការណ៍",
   "event_types_page_subtitle": "បង្កើតព្រឹត្តិការណ៍ដើម្បីចែករំលែកសម្រាប់មនុស្សដើម្បីកក់នៅលើប្រតិទិនរបស់អ្នក។",
   "new": "ថ្មី",
-  "new_event_type_btn": "ប្រភេទព្រឹត្តិការណ៍ថ្មី",
   "new_event_type_heading": "បង្កើតប្រភេទព្រឹត្តិការណ៍ដំបូងរបស់អ្នក",
   "new_event_type_description": "ប្រភេទព្រឹត្តិការណ៍អនុញ្ញាតឱ្យអ្នកចែករំលែកតំណដែលបង្ហាញពេលវេលាដែលមាននៅលើប្រតិទិនរបស់អ្នក និងអនុញ្ញាតឱ្យអ្នកផ្សេងធ្វើការកក់ជាមួយអ្នក។",
   "event_type_created_successfully": "ប្រភេទព្រឹត្តិការណ៍ {{eventTypeTitle}} ត្រូវបានបង្កើតដោយជោគជ័យ",
   "event_type_updated_successfully": "ប្រភេទព្រឹត្តិការណ៍ {{eventTypeTitle}} បានធ្វើបច្ចុប្បន្នភាពដោយជោគជ័យ",
   "event_type_deleted_successfully": "ប្រភេទព្រឹត្តិការណ៍ត្រូវបានលុបដោយជោគជ័យ",
   "hours": "ម៉ោង",
-  "your_email": "អ៊ីមែល​របស់​អ្នក",
   "change_avatar": "ផ្លាស់ប្តូរ Avatar",
   "upload_avatar": "បង្ហោះ Avatar",
   "language": "ភាសា",
   "timezone": "ល្វែងម៉ោង",
-  "first_day_of_week": "ថ្ងៃដំបូងនៃសប្តាហ៍",
-  "repeats_up_to_one": "ធ្វើម្តងទៀតរហូតដល់ {{count}} ដង",
-  "repeats_up_to_other": "ធ្វើម្តងទៀតរហូតដល់ {{count}} ដង",
-  "event_remaining_one": "{{count}} ព្រឹត្តិការណ៍ដែលនៅសល់",
   "event_remaining_other": "{{count}} ព្រឹត្តិការណ៍ដែលនៅសល់",
   "repeats_every": "ធ្វើម្តងទៀតរៀងរាល់",
   "time_format": "ទម្រង់ពេលវេលា",
@@ -251,6 +170,5 @@
   "invoices": "វិក្កយបត្រ",
   "users": "អ្នកប្រើប្រាស់",
   "user": "អ្នកប្រើប្រាស់",
-  "general_description": "គ្រប់គ្រងការកំណត់សម្រាប់ភាសា និងល្វែងម៉ោងរបស់អ្នក។",
-  "timezone_variable": "ល្វែងម៉ោង"
+  "general_description": "គ្រប់គ្រងការកំណត់សម្រាប់ភាសា និងល្វែងម៉ោងរបស់អ្នក។"
 }
