--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -103,6 +103,9 @@
   "new_event_request": "New event request: {{attendeeName}} - {{date}} - {{eventType}}",
   "confirm_or_reject_request": "Confirm or reject the request",
   "check_bookings_page_to_confirm_or_reject": "Check your bookings page to confirm or reject the booking.",
+  "check_in_assistant": "Check-in Assistant",
+  "check_in_assistant_description": "Makes an outbound call to check if scheduled appointment works or if you want to reschedule.",
+  "create_your_own_prompt": "Create your own prompt and use it to make an outbound call.",
   "event_awaiting_approval": "An event is waiting for your approval",
   "event_awaiting_approval_recurring": "A recurring event is waiting for your approval",
   "someone_requested_an_event": "Someone has requested to schedule an event on your calendar.",
@@ -2409,6 +2412,7 @@
   "confirm_email": "Confirm your email",
   "scheduler_first_name": "The first name of the person booking",
   "scheduler_last_name": "The last name of the person booking",
+  "scheduler_name": "Scheduler Name",
   "organizer_first_name": "Your first name",
   "confirm_email_description": "We sent an email to <strong>{{email}}</strong>. Click the link in the email to verify this address.",
   "send_event_details_to": "Send event details to",
