feat: Add Proton Calendar package to the app store
This commit adds the Proton Calendar package to the app store. It includes the following changes:
- Added DESCRIPTION.md file
- Added api/index.ts file
- Added index.ts file
- Added lib/index.ts file
- Added config.json file
- Added package.json file
- Added api/add.ts file

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -326,6 +326,7 @@
   "welcome_instructions": "Tell us what to call you and let us know what timezone you’re in. You’ll be able to edit this later.",
   "connect_caldav": "Connect to CalDav (Beta)",
   "connect_ics_feed": "Connect to an ICS Feed",
+  "connect_proton_calendar_ics_feed": "Connect to a Proton Calendar ICS Feed",
   "connect": "Connect",
   "try_for_free": "Try it for free",
   "create_booking_link_with_calcom": "Create your own booking link with {{appName}}",
@@ -2507,6 +2508,7 @@
   "event_expired": "This event is expired",
   "skip_contact_creation": "Skip creating contacts if they do not exist in {{appName}} ",
   "skip_writing_to_calendar_note": "If your ICS link is read-only (e.g., Proton Calendar), check the box above to avoid errors. You'll also need to manually update your calendar for changes.",
+  "proton_calendar_note": "You'll also need to manually update your calendar for changes.",
   "grant_admin_api": "Grant Admin API Access",
   "revoke_admin_api": "Revoke Admin API Access",
   "apple_connect_atom_label": "Connect Apple Calendar",
