--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -1066,7 +1066,7 @@
   "zapier_setup_instructions": "<0>Войдите в свой аккаунт Zapier и создайте новый Zap.</0><1>Выберите в качестве приложения-триггера Cal.com. Также выберите событие-триггер.</1><2>Выберите свою учетную запись и введите уникальный ключ API.</2><3>Проверьте триггер.</3><4>Готово!</4>",
   "make_setup_instructions": "<0>Перейдите по <1><0>пригласительной ссылке Make</0></1> и установите приложение Cal.com.</0><1>Войдите в аккаунт Make и создайте новый сценарий.</1><2>Выберите Cal.com в качестве приложения-триггера. Также выберите событие-триггер.</2><3>Выберите свою учетную запись и введите уникальный ключ API.</3><4>Проверьте триггер.</4><5>Готово!</5>",
   "install_zapier_app": "Сначала установите приложение Zapier из App Store.",
-  "install_make_app": "Сначала установите приложение Make из App Store.",
+  "install_make_app": "Извините, это приложение не установлено в вашей учетной записи. Посетите наш магазин приложений, чтобы изучить и открыть для себя это и другие замечательные приложения.",
   "connect_apple_server": "Подключиться к серверу Apple",
   "calendar_url": "URL-адрес календаря",
   "apple_server_generate_password": "Сгенерируйте пароль для программы, чтобы использовать его в {{appName}}, по адресу",
