--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -1065,7 +1065,7 @@
   "zapier_setup_instructions": "<0>Zapier 계정에 로그인하고 새 Zap을 만듭니다.</0><1>Cal.com을 트리거 앱으로 선택합니다. 또한 트리거 이벤트를 선택합니다.</1><2>계정을 선택한 후 고유 API 키를 입력합니다.</2><3>트리거를 테스트합니다.</3><4>설정이 완료되었습니다!</4 >",
   "make_setup_instructions": "<0><1><0>초대 링크 만들기</0></1>로 이동하여 Cal.com 앱을 설치합니다.</0><1>Make 계정에 로그인하고 새 시나리오를 만듭니다.</1><2>Cal.com을 Trigger 앱으로 선택합니다. 트리거 이벤트도 선택합니다.</2><3>계정을 선택한 후 고유 API 키를 입력합니다.</3><4>트리거를 테스트합니다.</4><5>이제 준비되었습니다!</5 >",
   "install_zapier_app": "먼저 앱 스토어에서 Zapier 앱을 설치하십시오.",
-  "install_make_app": "먼저 앱 스토어에서 Make 앱을 설치하십시오.",
+  "install_make_app": "죄송합니다. 이 앱은 귀하의 계정에 설치되어 있지 않습니다. 이 앱과 다른 훌륭한 앱을 탐색하고 발견하려면 앱 스토어를 방문하세요.",
   "connect_apple_server": "Apple 서버에 연결하기",
   "calendar_url": "캘린더 URL",
   "apple_server_generate_password": "{{appName}}에서 사용할 앱 비밀번호 생성:",
