--- a/apps/web/public/static/locales/sr/common.json
+++ b/apps/web/public/static/locales/sr/common.json
@@ -1065,7 +1065,7 @@
   "zapier_setup_instructions": "<0>Prijavite se na vaš Zapier nalog i kreirajte novi Zap.</0><1>Izaberite Cal.com kao vašu Trigger aplikaciju. Takođe izaberite i Trigger događaj.</1><2>Izaberite svoj nalog i unesite vaš jedinstveni API ključ.</2><3>Testirajte svoj Trigger.</3><4>Završili ste!</4>",
   "make_setup_instructions": "<0>Idite na <1><0>link Napravi pozivnicu</0></1> i instalirajte aplikaciju Cal.com.</0><1>Prijavite se u Napravi nalog i kreirajte novi Scenario.</1><2>Izaberite Cal.com kao vašu applikaciju Okidač. Takođe odaberite okidač događaja.</2><3>Izaberite svoj nalog i unesite svoj jedinstveni API ključ.</3><4>Testirajte svoj okidač.</4><5>Spremni ste!</5>",
   "install_zapier_app": "Prvo instalirajte aplikaciju Zapier iz App Store.",
-  "install_make_app": "Prvo instalirajte aplikaciju Make iz App Store-a.",
+  "install_make_app": "Nažalost, ova aplikacija nije instalirana na vašem računu. Posjetite našu trgovinu aplikacija kako biste istražili i otkrili ovu i druge izvrsne aplikacije.",
   "connect_apple_server": "Poveži se sa Apple serverom",
   "calendar_url": "URL kalendara",
   "apple_server_generate_password": "Generišite posebnu lozinku aplikacije za korišćenje sa {{appName}} na",
