--- a/apps/web/public/static/locales/uk/common.json
+++ b/apps/web/public/static/locales/uk/common.json
@@ -1097,7 +1097,7 @@
   "zapier_setup_instructions": "<0>Увійдіть в обліковий запис Zapier та створіть Zap.</0><1>Виберіть Cal.com як додаток Trigger, а також укажіть подію Trigger.</1><2>Виберіть свій обліковий запис і введіть унікальний ключ API.</2><3>Перевірте тригер.</3><4>Усе готово!</4>",
   "make_setup_instructions": "<0>Перейдіть<1><0>за посиланням у запрошенні Make</0></1> і встановіть додаток Cal.com.</0><1>Увійдіть у свій обліковий запис Make і створіть новий сценарій.</1><2>Виберіть Cal.com як додаток Trigger, а також укажіть подію Trigger.</2><3>Виберіть свій обліковий запис і введіть унікальний ключ API.</3><4>Перевірте Trigger.</4><5>Усе готово!</5>",
   "install_zapier_app": "Спочатку встановіть додаток Zapier з App Store.",
-  "install_make_app": "Спочатку встановіть додаток Make з App Store.",
+  "install_make_app": "На жаль, ця програма не встановлена ​​у вашому обліковому записі. Відвідайте наш магазин додатків, щоб ознайомитись із цим та іншими чудовими додатками.",
   "connect_apple_server": "Підключитися до сервера Apple",
   "calendar_url": "URL-адреса календаря",
   "apple_server_generate_password": "Згенеруйте спеціальний пароль додатка для використання з {{appName}} за адресою",
